--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Self Directed FD Starter</title>
+  <title>Play FE</title>
 </head>
 <body>
-      <!--  the a tag below can link you to another HTML page  -->
-      <!--  if you click the button in the browser right now, you'll get an error because that is not a real file path -->
-      <a href="<file path"><button class="default-button">GO TO OTHER PAGE</button></a>
-    <script
-    src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
+
+  <h3>Search For Songs:</h3>
+  <form>
+    <input type="text" placeholder="Enter an artist">
+    <input type="submit">
+  </form>
+
+  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
   </script>
   <script src="main.bundle.js"></script>
 </body>
