Adds small change to search header.

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-  <h3>Search For Songs:</h3>
+  <h3>Search For Artists:</h3>
   <form>
-    <input type="text" placeholder="Enter an artist">
+    <input type="text" placeholder="Enter an artist name">
     <input type="submit">
   </form>
 
