Sets up event listener on search button

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <h3>Search For Artists:</h3>
   <form>
-    <input type="text" placeholder="Enter an artist name">
-    <input type="submit">
+    <input id="search-field" type="text" placeholder="Enter an artist name">
+    <input id="search-btn" type="submit">
   </form>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
