--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <input id="search-field" type="text" placeholder="Enter an artist name">
     <input id="search-btn" type="submit">
   </form>
+  
+  <div class="results">
+    <ul id="search-results"></ul>
+  </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
   </script>
