Wraps search form in div

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <title>Play FE</title>
 </head>
 <body>
+  <div class="search-form">
+    <h3>Search For Artists:</h3>
+    <form>
+      <input id="search-field" type="text" placeholder="Enter an artist name">
+      <input id="search-btn" type="submit">
+    </form>
+  </div>
 
-  <h3>Search For Artists:</h3>
-  <form>
-    <input id="search-field" type="text" placeholder="Enter an artist name">
-    <input id="search-btn" type="submit">
-  </form>
-  
   <div class="results">
     <ul id="search-results"></ul>
   </div>
