Adds structure for favorites to index page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <div id="searched-artist"></div>
     <ul id="search-results"></ul>
   </div>
+  
+  <div class="favorites">
+    <h2>Favorites</h2>
+    <ul id="favorites-list"></ul>
+  </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
   </script>
