--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     </form>
   </div>
 
-  <div class="results">
-    <div id="searched-artist"></div>
-    <ul id="search-results"></ul>
-  </div>
-  
-  <div class="favorites">
-    <h2>Favorites</h2>
-    <ul id="favorites-list"></ul>
+  <div class="info-container">    
+    <div class="results">
+      <div id="searched-artist"></div>
+      <ul id="search-results"></ul>
+    </div>
+    
+    <div class="favorites">
+      <h2>Favorites</h2>
+      <ul id="favorites-list"></ul>
+    </div>
   </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
