Consolidates styling for Search Results and Favorites into box class

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   </div>
 
   <div class="info-container">    
-    <div class="results">
+    <div class="results box">
       <div id="searched-artist"></div>
       <ul id="search-results"></ul>
     </div>
     
-    <div class="favorites">
+    <div class="favorites box">
       <h2>Favorites</h2>
       <ul id="favorites-list"></ul>
     </div>
