--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       <h2>Favorites</h2>
       <ul id="favorites-list"></ul>
     </div>
+
+    <div class="playlists box">
+      <ul id="playlists-list"></div>
+    </div>
   </div>
 
   <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'>
