--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </div>
 
     <div class="playlists box">
-      <ul id="playlists-list"></div>
+      <ul id="playlists-list">
+        <ul id="playlists-songs-list"></ul>
+      </ul>
     </div>
   </div>
 
