Adds accordion to HTML

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     </div>
 
     <div class="playlists box">
-      <ul id="playlists-list">
-        <ul id="playlists-songs-list"></ul>
-      </ul>
+          <ul id="playlists-list">
+            <button class="accordion">Playlists</button>
+              <div class="panel" id="playlists-songs-list"></div>
+          </ul>
     </div>
   </div>
 
