Removes extra HTML that is not needed any longer

--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
     </div>
 
     <div class="playlists box">
-          <ul id="playlists-list">
-            <button class="accordion">Playlists</button>
-              <div class="panel" id="playlists-songs-list"></div>
-          </ul>
+          <ul id="playlists-list"></ul>
     </div>
   </div>
 
