Adds button and field for new playlists to be added.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     </form>
   </div>
 
+  <div class="new-playlist">
+    <input id='playlist-title' type="text" placeholder="Enter a title for your playlist">
+    <button class="add-playlist btn">Add Playlist</button>
+  </div>
+
   <div class="info-container">
     <div class="results box">
       <div id="searched-artist"></div>
@@ -24,7 +29,6 @@
       <h2>Favorites</h2>
       <ul id="favorites-list"></ul>
     </div>
-
     <div class="playlists box">
           <ul id="playlists-list"></ul>
     </div>
