Adds id for selection of add playlist button

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <div class="new-playlist">
     <input id='playlist-title' type="text" placeholder="Enter a title for your playlist">
-    <button class="add-playlist btn">Add Playlist</button>
+    <button class="add-playlist btn" id='add-playlist'>Add Playlist</button>
   </div>
 
   <div class="info-container">
