Adds field and button to update playlist. Will only work on active playlist

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <button class="add-playlist btn" id='add-playlist'>Add Playlist</button>
   </div>
 
+  <div class="update-active-playlist">
+    <input id='update-playlist-title' type="text" placeholder="New Title">
+    <button class="update-btn btn" id="update-playlist">Update Playlist</button>
+  </div>
+
   <div class="info-container">
     <div class="results box">
       <div id="searched-artist"></div>
